--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         />
         <source
           media="(min-width: 20em)"
-          srcset="assets\images\image-web-3-mobile.jpg"
+          srcset="./assets/images/image-web-3-mobile.jpg"
         />
         <img
           src="./assets/images/image-web-3-desktop.jpg"
