--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           class="hero__img"
           width="730px"
           height="300px"
-          sizes="(max-width: 62.5em) 730px, (min-width: 20em) 100vw"
+          sizes="(min-width: 62.5em) 730px, (min-width: 20em) 100vw"
         />
       </picture>
       <div class="hero__main-txt">
